# sqlalchemy-crash-course

./: main.py  pyproject.toml  seed.py
models/: base.py  user.py
queries/: deletes.py  eager_loading.py  inserts.py  querying.py  transactions.py  updates.py
