[tool.poetry]
name = "sqlalchemy-crash-course"
version = "0.1.0"
description = ""
authors = ["Demos Petsas <demos@petsas.consulting>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
